<resources>
    <string name="app_name">Halloween Animations</string>
    <string name="blink">BLINK</string>
    <string name="clockwise">ROTATE</string>
    <string name="slide">SLIDE UP</string>
    <string name="move">MOVE</string>
    <string name="shrink">SHRINK</string>
    <string name="zoom">ZOOM</string>
    <string name="stop_animation">STOP ANIMATION</string>
    <string name="course_rating">Course Rating</string>
    <string name="course_name">Course Name</string>
</resources>
